[gd_scene load_steps=5 format=3 uid="uid://dpydmbkfvaf36"]

[ext_resource type="Script" uid="uid://b6d0cmc1okcx8" path="res://Scripts/breakable.gd" id="1_lb0jm"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lb0jm"]
inherit_velocity_ratio = 0.362
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, -4.76, 0)
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_omdkh"]

[sub_resource type="QuadMesh" id="QuadMesh_afg2g"]
material = SubResource("StandardMaterial3D_omdkh")
size = Vector2(0.1, 0.1)

[node name="breakable" type="Node3D" node_paths=PackedStringArray("hitSound", "deathSound", "deathEffect")]
script = ExtResource("1_lb0jm")
hitSound = NodePath("hitSound")
deathSound = NodePath("deathSound")
deathEffect = NodePath("deathEffect")

[node name="hitSound" type="AudioStreamPlayer3D" parent="."]
max_polyphony = 10

[node name="deathSound" type="AudioStreamPlayer3D" parent="."]

[node name="deathEffect" type="GPUParticles3D" parent="."]
transparency = 0.33
emitting = false
amount = 200
lifetime = 1.91
one_shot = true
speed_scale = 0.5
explosiveness = 0.47
randomness = 0.42
transform_align = 1
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_lb0jm")
draw_pass_1 = SubResource("QuadMesh_afg2g")
